<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory android:title="Song List"><CheckBoxPreference android:summary="Include arcade songs in CS styles" android:title="AC Songs in CS" android:key="acincs" android:defaultValue="@string/acincs_default"></CheckBoxPreference><CheckBoxPreference android:summary="Include arcade revival songs (CS only)" android:title="Show Revivals" android:key="revivals" android:defaultValue="@string/revivals_default"></CheckBoxPreference><CheckBoxPreference android:key="section_headers" android:defaultValue="@string/section_headers_default" android:title="Section Headers" android:summary="Separate songs with a group header"></CheckBoxPreference><PreferenceScreen android:key="defaults_screen" android:title="Song List Defaults" android:summary="Set the default style &amp; mode for the song list."><ListPreference android:dialogTitle="Select Style" android:key="default_style" android:summary="The style loaded on startup" android:title="Style"></ListPreference>
<ListPreference android:dialogTitle="Select Mode" android:key="default_mode" android:summary="The mode loaded on startup" android:title="Mode"></ListPreference>
</PreferenceScreen>

</PreferenceCategory><PreferenceCategory android:title="Network"><EditTextPreference android:defaultValue="@string/ssid_default" android:key="ssid" android:dialogTitle="Home SSID" android:title="Home SSID" android:summary="Enables push/pull when connected via WiFi to this network"></EditTextPreference><EditTextPreference android:dialogTitle="Service Address" android:title="Service Address" android:summary="IP address or hostname for the local data service" android:defaultValue="@string/service_host_default" android:key="service_host"></EditTextPreference><CheckBoxPreference android:key="geoscore" android:title="Store Location" android:summary="Saves your GPS location when you add scores." android:defaultValue="@string/geoscore_default"></CheckBoxPreference>
</PreferenceCategory>







<PreferenceCategory android:title="Database"><Preference android:key="min_push_date" android:title="%d New Scores" android:enabled="false" android:selectable="true" android:summary="Since last data push or pull on:\n%s"></Preference></PreferenceCategory>



</PreferenceScreen>
